doc: explain the pattern

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -8,3 +8,4 @@ v0.1.0 generate qrcode from 32x32 pattern
 Jun 3, 2020
 
 v0.1.1 add knit cap and horned hat type
+v0.2.0 refactor qrencode, add shirt and dress pro type
